# usb-moded

./: .gitignore  Copyright  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  dbus-send-test.txt  usb-moded.ini  usb_moded.conf  usb_moded.pc.in
config/: mass-storage-jolla.ini  mass-storage-n900.ini  power-supply-n900.ini
config/diag/: qa_diagnostic_mode.ini
config/dyn-modes/: adb_mode.ini  android_acm.ini  android_at.ini  connection_sharing-android-connman.ini  connection_sharing.ini  developer_mode-android.ini  developer_mode.ini  diag_mode.ini  diag_mode_old.ini  host_mode_jolla.ini  mass-storage.ini  mass_storage_android.ini  mtp_mode-android.ini  mtp_mode.ini  pc_suite-android.ini  sync_mode.ini  vfat_android.ini
config/run/: adb-diag.ini  adb-startserver.ini  adb.ini  diag-adb-prepare.ini  mtp.ini  qa-diag.ini  udhcpd-adb-mode.ini  udhcpd-connection-sharing.ini  udhcpd-developer-mode.ini  vfat.ini
debian/: README.Debian  api  changelog  control  copyright  manpage.1  rules  usb-moded-doc.doc-base  usb-moded.aegis  usb-moded.schemas  usb_moded.conf
docs/: Makefile.am  dbus-send-test.txt  ofono.txt  usb_moded-doc.txt  usb_moded-doxygen.conf.in
openembedded/: usb-moded.inc  usb-moded_0.80.7.bb
rpm/: usb-moded.changes  usb-moded.service  usb-moded.spec  usb_moded.conf
src/: Makefile.am  com.meego.usb_moded.xml  usb_moded-android.c  usb_moded-android.h  usb_moded-appsync-dbus-private.h  usb_moded-appsync-dbus.c  usb_moded-appsync-dbus.h  usb_moded-appsync.c  usb_moded-appsync.h  usb_moded-chargerdetection.c  usb_moded-config-private.h  usb_moded-config.c  usb_moded-config.h  usb_moded-dbus-private.h  usb_moded-dbus.c  usb_moded-dbus.h  usb_moded-devicelock.c  usb_moded-devicelock.h  usb_moded-dsme.c  usb_moded-dsme.h  usb_moded-dyn-config.c  usb_moded-dyn-config.h  usb_moded-gconf-private.h  usb_moded-gconf.c  usb_moded-gconf.h  usb_moded-hal.c  usb_moded-hw-ab.h  usb_moded-lock.h  usb_moded-log.c  usb_moded-log.h  usb_moded-mac.c  usb_moded-mac.h  usb_moded-modes.h  usb_moded-modesetting.c  usb_moded-modesetting.h  usb_moded-modules-android.c  usb_moded-modules-libusbg.c  usb_moded-modules.c  usb_moded-modules.h  usb_moded-network.c  (+11 more)
systemd/: turn-usb-rescue-mode-off  usb-moded-args.conf  usb-moded.conf  usb-moded.service  usb-rescue-mode-off.service
utils/: udev-search.c
